...
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!--RecyclerView for budget rows-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBudgetList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!--Back button-->
    <Button
...
